@@ -2,6 +2,7 @@ v0.1.4
 - Add subheaders to resource
 - Set min width
 - Add memory information to resource tab 
+- Accept env variables
 
 v0.1.3
 - Check connection before user/password prompt
